bustage due to extra nsITransfer.init() param added in bug 1739348
Categories
(Thunderbird :: General, defect)
Tracking
(thunderbird_esr102 fixed)
Tracking | Status | |
---|---|---|
thunderbird_esr102 | --- | fixed |
People
(Reporter: benc, Assigned: benc)
References
Details
(Whiteboard: [TM:102.3.0])
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-esr102+
|
Details | Review |
Looks minor - there's an extra (optional) bool param added to nsITransfer.init():
* @param aOpenDownloadsListOnStart true (default) - Open downloads panel.
* false - Only show an icon indicator.
* This parameter is optional.
I think we want false here, but it might not matter either way.
Assignee | ||
Comment 1•3 years ago
|
||
Updated•3 years ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/4720ce86c109
Port bug 1739348 - Bustage fix. Extra param (aOpenDownloadsListOnStart) was added to nsITransfer.init(). r=mkmelin
Updated•3 years ago
|
Comment 3•2 years ago
|
||
The underlying change was uplifted to mozilla-esr102, we need this fix on comm-esr102 to fix our build.
Comment 4•2 years ago
|
||
Comment on attachment 9286020 [details]
Bug 1780187 - Bustage fix. Extra param (aOpenDownloadsListOnStart) was added to nsITransfer.init() bug 1739348. r=#thunderbird-reviewers
[Approval Request Comment]
required build bustage fix
Comment 5•2 years ago
|
||
Comment on attachment 9286020 [details]
Bug 1780187 - Bustage fix. Extra param (aOpenDownloadsListOnStart) was added to nsITransfer.init() bug 1739348. r=#thunderbird-reviewers
[Triage Comment]
Approved for esr102
Comment 6•2 years ago
|
||
This uplift is not required for the planned 102.2.2 release, but is for 102.3.0.
Updated•2 years ago
|
Comment 7•2 years ago
|
||
bugherder uplift |
Thunderbird 102.3.0:
https://hg.mozilla.org/releases/comm-esr102/rev/90cf7db9b1ed
Description
•