Bug 1780187 - Port bug 1739348 - Bustage fix. Extra param (aOpenDownloadsListOnStart) was added to nsITransfer.init(). r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D152164

--HG--
extra : amend_source : 76f7f65f67eefd1389086d023a5057898647e7bd